# CodeCoach

./: .env.example  .gitignore  README.md  package-lock.json  package.json  start-frontend-v2.ps1  start_backend.ps1  tsconfig.json  vite.config.ts
backend/: data_utils.py  main.py  pyproject.toml  rebuild_collections.py  seed_data.py
backend/agents/: base.py  coach_agent.py  interview_agent.py  review_agent.py
backend/api/: achievement.py  assessment.py  auth.py  chat.py  dashboard.py  errors.py  exercise.py  interview.py  learn.py  notebook.py  review.py  sandbox.py
backend/data/: achievements.json  assessment_result.json  error_book.json  user_profile.json
backend/data/chroma/: chroma.sqlite3
backend/models/: __init__.py  conversation.py  database.py  exercise.py  progress.py  user.py
backend/orchestrator/: __init__.py
backend/rag/: __init__.py  embedder.py  exercise_bank.py  knowledge_base.py  store.py  user_memory.py
backend/sandbox/: __init__.py  js_runner.py  limits.py  python_runner.py
backend/services/: achievement.py  assessor.py  dashboard_service.py  error_book.py  exercise_service.py  learn_service.py  multi_lang_assessment.py  multi_lang_exercises.py  multi_lang_lessons.py  profile_service.py  question_generator.py
docs/specs/: 2026-06-24-编程AI陪练系统-实施计划.md  2026-06-24-编程AI陪练系统-设计规格书.md
electron/: main.ts  preload.ts
electron/services/: pythonBridge.ts
frontend/: App.tsx  index.html  main.tsx
frontend/components/: ErrorBoundary.tsx
frontend/components/Assessment/: Assessment.css  Assessment.tsx
frontend/styles/: global.css
(+22 files in other folders)
